Added base architecture and test cases for the project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">UserSearchApplication</string>
+    <string name="error_dialog_title">Error</string>
 </resources>
